[package]
name = "steam_cli_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ctrlc = "3.4.4"
dirs = "5.0.1"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.118" }
sqlite = "0.36.0"
tokio = { version = "1", features = ["full"] }
